<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-40dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:ignore="VisualLintBounds">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">

                <Button
                    android:id="@+id/buttonSignUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:layout_marginBottom="256dp"
                    android:backgroundTint="#00BCD4"
                    android:text="@string/signup"
                    android:textColor="#283593"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="VisualLintButtonSize"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="194dp" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:autofillHints=""
                    android:background="#C9F6FB"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColor="#000000"
                    android:textColorHint="#546E7A"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:background="#C9F6FB"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="8dp"
                    android:drawableTint="#454545"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textColor="#000000"
                    android:textColorHint="#616161"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextName" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="350dp"
                    android:layout_height="49dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:background="#C9F6FB"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColor="#000000"
                    android:textColorHint="#546E7A"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

                <EditText
                    android:id="@+id/editTextConfirmPassword"
                    android:layout_width="350dp"
                    android:layout_height="49dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:background="#C9F6FB"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColor="#000000"
                    android:textColorHint="#546E7A"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

                <TextView
                    android:id="@+id/loginRedirect"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="68dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="48dp"
                    android:onClick="openSignUpActivity"
                    android:text="signin"
                    android:textColor="#2196F3"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.384"
                    app:layout_constraintStart_toEndOf="@+id/textView3"

                    app:layout_constraintVertical_bias="0.087"
                    tools:ignore="VisualLintBounds" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="96dp"
                    android:text="do you have a account"
                    android:textColor="#3E3E3E"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.286"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintVertical_bias="0.087" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageViewHeader"
        android:layout_width="442dp"
        android:layout_height="710dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="180dp"
        android:src="@drawable/login"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewHeaderr"
        android:layout_width="130dp"
        android:layout_height="129dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
